# SAGE

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
.claude/: ralph-loop.local.md
data/prompts/: check_in.md  followup.md  framing.md  outcome_check.md  outcome_discovery.md  practice.md  practice_character.md  practice_feedback.md  practice_hint.md  probing.md  system.md  teaching.md  verification.md
docs/architecture/: context-management.md  data-model.md  system-design.md  voice-ui-parity.md
docs/chatgpt-app/: api-mapping.md  architecture.md  tools.md  widgets.md
docs/narrative/: SAGE_narrative.md
src/sage/: __init__.py
tests/: conftest.py  playwright_test_report.md  test_accessibility.py  test_api.py  test_assessment.py  test_check_in_voice_support.py  test_context.py  test_dialogue.py  test_embeddings.py  test_gaps.py  test_integration.py  test_intent_extractor.py  test_learning_graph.py  test_mcp.py  test_modality_parity.py  test_models.py  test_normalizer.py  test_oauth.py  test_orchestrator.py  test_practice.py  test_queries.py  test_scenarios_api.py  test_session_state.py  test_session_state_api.py  test_store.py  test_stub_pages.py  test_ui_agent.py  test_ui_patterns.py  test_ui_performance.py  test_voice_error_recovery.py  test_voice_ui_parity.py
web/: .env.local.example  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/.claude/: ralph-loop.local.md
web/app/: globals.css  layout.tsx  page.tsx
web/hooks/: useAccessibility.ts  useChat.ts  useGrokVoice.ts  useLearner.ts  usePracticeMode.ts  useVoice.ts  (+2 more)
(+177 files in other folders)
